Auth0 y Perfil de Usuario

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_API_URL=http://localhost:8080/api
+VITE_IMG_API_URL=http://localhost:8081/api/imagenes
 VITE_AUTH0_DOMAIN = dev-tpbpxmhe53uahzfg.us.auth0.com
 VITE_AUTH0_CLIENT_ID = d2TCYTVaf5tLkowGzeKQSYnbPJ5Xl4J8
 VITE_AUTH0_CALLBACK_URL = http://localhost:5174/callback
